# gemma-screen-observer

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
src/gemma_screen_observer/: __init__.py  __main__.py  capture.py  config.py  fast_diff.py  mcp_server.py  observer.py  orchestrator.py  state.py  unsloth_backend.py
