[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemma-screen-observer"
version = "0.1.0"
description = "Vision-based screen observer for automated game testing using Gemma 4, exposed as an MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "elliotttate" },
]
keywords = ["mcp", "gemma", "screen-capture", "game-testing", "vision", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "mcp>=1.0.0",
    "mss>=9.0.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
google = ["google-genai>=1.0.0"]
transformers = ["transformers>=4.40.0", "torch>=2.0.0", "accelerate>=0.30.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4.0"]

[project.scripts]
gemma-screen-observer = "gemma_screen_observer.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gemma_screen_observer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
